@@ -1,3 +1,7 @@
+2014-05-30  Michael R. Crusoe  <mcrusoe@msu.edu>
+
+    * Makefile: pylint now doesn't report when we ask it to ignore something
+
 2014-05-30  Titus Brown  <t@idyll.org>
 
     * khmer/_khmermodule.cc: remove merge2* functions: unused, untested.
